--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -29,7 +29,8 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+            android:icon="@drawable/app">
         <activity android:name=".client.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
