Project renamed to DIY Remote

--- a/server/src/web.xml
+++ b/server/src/web.xml
@@ -6,7 +6,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>lazy-remote-spring.xml</param-value>
+        <param-value>diy-remote-spring.xml</param-value>
     </context-param>
 
     <listener>
@@ -18,7 +18,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>lazy-remote-web-spring.xml</param-value>
+            <param-value>diy-remote-web-spring.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
