--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2013, Lazy-Remote Contributors
+  ~ Copyright (c) 2013, DIY-Remote Contributors
   ~ All rights reserved.
   ~
   ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
@@ -25,7 +25,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.strangeway.lazyremote"
+          package="org.strangeway.diyremote"
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
