--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -29,6 +29,7 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app.name"
             android:icon="@drawable/app">
         <activity android:name=".client.MainActivity"
