--- a/build.gradle
+++ b/build.gradle
@@ -230,6 +230,23 @@ project(':client') {
 
             instrumentTest.setRoot('test')
         }
+
+        signingConfigs {
+            release {
+                storeFile new File(new File(System.getProperty("user.home"), ".android"), "release.keystore")
+                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
+                keyAlias "android"
+                keyPassword System.getenv("ANDROID_RELEASE_PASSWORD")
+            }
+        }
+
+        buildTypes {
+            release {
+                debuggable false
+                jniDebugBuild false
+                signingConfig signingConfigs.release
+            }
+        }
     }
 
     idea {
