--- a/build.gradle
+++ b/build.gradle
@@ -26,19 +26,16 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url 'https://raw.github.com/rodionmoiseev/maven-repo/master/repo/releases'
-        }
     }
     dependencies {
-        classpath 'org.rodion.gradle:idea-utils-plugin:0.1'
-        classpath 'com.android.tools.build:gradle:0.5.7'
+        classpath 'com.github.rodionmoiseev.gradle.plugins:idea-utils:0.2'
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
 allprojects {
     group = 'org.strangeway.diy-remote'
-    version = '0.1'
+    version = '0.2'
 
     repositories {
         mavenCentral()
@@ -80,14 +77,9 @@ project(':scripting') {
     }
 
     dependencies {
-        compile 'org.codehaus.groovy:groovy:2.1.7'
-        compile 'org.codehaus.groovy:groovy-ant:2.1.7'
-        compile 'org.codehaus.groovy:groovy-sql:2.1.7'
-        compile 'org.codehaus.groovy:groovy-xml:2.1.7'
-        compile 'org.codehaus.groovy:groovy-json:2.1.7'
-        compile 'org.codehaus.groovy:groovy-templates:2.1.7'
+        compile 'org.codehaus.groovy:groovy-all:2.4.3'
 
-        compile 'org.apache.httpcomponents:httpclient:4.3'
+        compile 'org.apache.httpcomponents:httpclient:4.5'
     }
 }
 
@@ -121,14 +113,14 @@ project(':server') {
 
         testCompile 'org.testng:testng:6.8'
 
-        compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
-        compile 'org.eclipse.jetty:jetty-server:8.1.13.v20130916'
-        compile 'org.eclipse.jetty:jetty-webapp:8.1.13.v20130916'
-        compile 'com.google.code.gson:gson:2.2.4'
+        compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+        compile 'org.eclipse.jetty:jetty-server:9.2.11.v20150529'
+        compile 'org.eclipse.jetty:jetty-webapp:9.2.11.v20150529'
+        compile 'com.google.code.gson:gson:2.3.1'
 
-        compile 'org.apache.commons:commons-lang3:3.1'
+        compile 'org.apache.commons:commons-lang3:3.4'
         compile 'commons-io:commons-io:2.4'
-        compile 'commons-cli:commons-cli:1.2'
+        compile 'commons-cli:commons-cli:1.3'
     }
 
     applicationName = 'diy-remote'
@@ -214,8 +206,8 @@ project(':client') {
     project.archivesBaseName = 'dyi-remote'
 
     android {
-        compileSdkVersion 15
-        buildToolsVersion '18.0.1'
+        compileSdkVersion 17
+        buildToolsVersion '22.0.1'
 
         sourceSets {
             main {
@@ -231,24 +223,24 @@ project(':client') {
             instrumentTest.setRoot('test')
         }
 
-		if (rootProject.hasProperty('android.signed')) {
-	        signingConfigs {
-	            release {
-	                storeFile new File(new File(System.getProperty("user.home"), ".android"), "release.keystore")
-	                storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
-	                keyAlias "android"
-	                keyPassword System.getenv("ANDROID_RELEASE_PASSWORD")
-	            }
-	        }
+        if (rootProject.hasProperty('android.signed')) {
+            signingConfigs {
+                release {
+                    storeFile new File(new File(System.getProperty("user.home"), ".android"), "release.keystore")
+                    storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
+                    keyAlias "android"
+                    keyPassword System.getenv("ANDROID_RELEASE_PASSWORD")
+                }
+            }
 
-	        buildTypes {
-	            release {
-	                debuggable false
-	                jniDebugBuild false
-	                signingConfig signingConfigs.release
-	            }
-	        }
-		}
+            buildTypes {
+                release {
+                    debuggable false
+                    jniDebugBuild false
+                    signingConfig signingConfigs.release
+                }
+            }
+        }
     }
 
     idea {
